--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,26 @@
 #RESPONSIVE DESIGN
 */
 /* BASE - Base tyles, Variables, Mixins, etc. */
+.vertical-menu {
+  width: 260px;
+}
+
+.vertical-menu a {
+  background-color: white;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.vertical-menu a:hover {
+  background-color: #ccc;
+}
+
+.vertical-menu a.active {
+  background-color: rgb(89,171,227);
+  color: white;
+}
 
 .notification {
 /*  background-color: white;*/
@@ -42,7 +62,7 @@
   text-decoration: none;
   position: relative;
   display: inline-block;
-  height: auto;
+  height: 50px;
   width: 150px;
   text-align: center;
 }
@@ -53,12 +73,14 @@
 
 .notification .badge {
   position: absolute;
-  top: -10px;
-  right: -10px;
-  padding: 5px 10px;
+  top: 15%;
+  right: 8%;
   border-radius: 50%;
   background: red;
   color: white;
+  width: 15%;
+  text-align: center;
+  font-size:10px;
 }
 
 
