--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,88 @@
 #RESPONSIVE DESIGN
 */
 /* BASE - Base tyles, Variables, Mixins, etc. */
+/* Button used to open the contact form - fixed at the bottom of the page */
+/*
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+*/
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  top: 147px;
+  text-align: center;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  width: 830px;
+  overflow: scroll;
+  height: 690px;
+  padding: 10px; 
+  background-color: white;
+}
+
+/* Full-width input fields */
+/*
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+*/
+
+/* When the inputs get focus, do something */
+/*
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+*/
+
+/* Set a style for the submit/login button */
+/*
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+*/
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
+
+
+
+
 .vertical-menu {
   width: 260px;
 }
@@ -234,7 +316,7 @@ img {
   text-align: right;
 }
 #aa-header .aa-header-area .aa-header-right .aa-register {
-  border-right: 1px solid #f8f8f8;
+  border-right: 1px solid rgb(85,85,85);
   color: #fff;
   margin-right: 5px;
   padding-right: 10px;
@@ -267,8 +349,8 @@ img {
   padding: 0;
 }
 #aa-menu-area .main-navbar .navbar-header .aa-logo {
-  border: 2px solid #fff;
-  color: #fff;
+  border: 2px solid rgb(85,85,85);;
+  color: rgb(85,85,85);
   font-family: "Poppins", sans-serif;
   font-size: 30px;
   padding: 15px;
@@ -284,7 +366,7 @@ img {
   height: 100%;
 }
 #aa-menu-area .main-navbar .navbar-nav li a {
-  color: #fff;
+  color: rgb(85,85,85);;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -ms-transition: all 0.5s;
@@ -3473,14 +3555,17 @@ img {
   #aa-header .aa-header-area .aa-header-left .aa-telephone-no {  
     font-size: 13px;
     margin-top: 3px;
+	color: rgb(85,85,85);
   }
 
   #aa-header .aa-header-area .aa-header-right .aa-register {
     font-size: 14px;
+	color: rgb(85,85,85);
   }
 
   #aa-header .aa-header-area .aa-header-right .aa-login {
     font-size: 14px;
+	color: rgb(85,85,85);
   }
 
   #aa-properties .aa-properties-content .aa-properties-content-head {
